--- a/Makefile.in
+++ b/Makefile.in
@@ -103,14 +103,14 @@ iftop_SOURCES = addr_hash.c hash.c iftop.c ns_hash.c \
                  options.c screenfilter.c serv_hash.c \
                  sorted_list.c threadprof.c ui.c util.c \
 		 addrs_ioctl.c addrs_dlpi.c dlcommon.c \
-		 stringmap.c cfgfile.c vector.c
+		 stringmap.c vector.c
 
 
 noinst_HEADERS = addr_hash.h ether.h ethertype.h extract.h hash.h iftop.h \
                  integers.h ip.h llc.h ns_hash.h options.h \
                  screenfilter.h serv_hash.h sll.h sorted_list.h tcp.h \
                  threadprof.h token.h ui.h dlcommon.h stringmap.h \
-		 vector.h cfgfile.h ppp.h
+		 vector.h ppp.h
 
 
 man_MANS = iftop.8
@@ -137,7 +137,7 @@ am_iftop_OBJECTS = addr_hash.$(OBJEXT) hash.$(OBJEXT) \
 	screenfilter.$(OBJEXT) serv_hash.$(OBJEXT) \
 	sorted_list.$(OBJEXT) threadprof.$(OBJEXT) ui.$(OBJEXT) \
 	util.$(OBJEXT) addrs_ioctl.$(OBJEXT) addrs_dlpi.$(OBJEXT) \
-	dlcommon.$(OBJEXT) stringmap.$(OBJEXT) cfgfile.$(OBJEXT) \
+	dlcommon.$(OBJEXT) stringmap.$(OBJEXT) \
 	vector.$(OBJEXT)
 iftop_OBJECTS = $(am_iftop_OBJECTS)
 iftop_LDADD = $(LDADD)
@@ -153,7 +153,7 @@ depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
 @AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/addr_hash.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/addrs_dlpi.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/addrs_ioctl.Po ./$(DEPDIR)/cfgfile.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/addrs_ioctl.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/dlcommon.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/hash.Po ./$(DEPDIR)/iftop.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/ns_hash.Po ./$(DEPDIR)/options.Po \
@@ -259,7 +259,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/addr_hash.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/addrs_dlpi.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/addrs_ioctl.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cfgfile.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dlcommon.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hash.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/iftop.Po@am__quote@
