Remove more unused stuff

--- a/Makefile.in
+++ b/Makefile.in
@@ -104,15 +104,13 @@ sbin_PROGRAMS = iftop
 iftop_SOURCES = addr_hash.c hash.c iftop.c \
                  options.c screenfilter.c  \
                  sorted_list.c threadprof.c ui.c util.c \
-		 addrs_ioctl.c addrs_dlpi.c dlcommon.c \
-		 stringmap.c vector.c
-
+		 addrs_ioctl.c addrs_dlpi.c dlcommon.c		 
 
 noinst_HEADERS = addr_hash.h ether.h ethertype.h extract.h hash.h iftop.h \
                  integers.h ip.h llc.h options.h \
                  screenfilter.h sll.h sorted_list.h tcp.h \
-                 threadprof.h token.h ui.h dlcommon.h stringmap.h \
-		 vector.h ppp.h
+                 threadprof.h token.h ui.h dlcommon.h \
+		 ppp.h
 
 
 man_MANS = iftop.8
@@ -139,8 +137,8 @@ am_iftop_OBJECTS = addr_hash.$(OBJEXT) hash.$(OBJEXT) \
 	screenfilter.$(OBJEXT) \
 	sorted_list.$(OBJEXT) threadprof.$(OBJEXT) ui.$(OBJEXT) \
 	util.$(OBJEXT) addrs_ioctl.$(OBJEXT) addrs_dlpi.$(OBJEXT) \
-	dlcommon.$(OBJEXT) stringmap.$(OBJEXT) \
-	vector.$(OBJEXT)
+	dlcommon.$(OBJEXT)
+
 iftop_OBJECTS = $(am_iftop_OBJECTS)
 iftop_LDADD = $(LDADD)
 iftop_DEPENDENCIES =
@@ -161,9 +159,9 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/options.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/screenfilter.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/sorted_list.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/stringmap.Po ./$(DEPDIR)/threadprof.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/ui.Po ./$(DEPDIR)/util.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/vector.Po
+@AMDEP_TRUE@	./$(DEPDIR)/threadprof.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/ui.Po ./$(DEPDIR)/util.Po
+
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
@@ -267,11 +265,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/options.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/screenfilter.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sorted_list.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stringmap.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/threadprof.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ui.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/util.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vector.Po@am__quote@
 
 distclean-depend:
 	-rm -rf ./$(DEPDIR)
