Add nweb.c/nweb.h to Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,7 @@ iftop_SOURCES = addr_hash.c edline.c hash.c iftop.c ns_hash.c \
                  options.c resolver.c screenfilter.c serv_hash.c \
                  sorted_list.c threadprof.c ui_common.c ui.c tui.c util.c \
 		 addrs_ioctl.c addrs_dlpi.c dlcommon.c \
-		 stringmap.c cfgfile.c vector.c
+		 stringmap.c cfgfile.c vector.c nweb.c
 
 #iftop_dump_SOURCES = counter_hash.c hash.c iftop-dump.c  \
 #                 options.c \
@@ -31,7 +31,7 @@ noinst_HEADERS = addr_hash.h addrs_ioctl.h ether.h ethertype.h extract.h hash.h 
                  integers.h ip.h llc.h ns_hash.h options.h resolver.h \
                  screenfilter.h serv_hash.h sll.h sorted_list.h tcp.h \
                  threadprof.h token.h ui_common.h ui.h tui.h dlcommon.h stringmap.h \
-		 vector.h cfgfile.h ppp.h
+		 vector.h cfgfile.h ppp.h nweb.h
 
 man_MANS = iftop.8
 
